--- a/src/routes/preparation.scss
+++ b/src/routes/preparation.scss
@@ -51,6 +51,7 @@
 
     .items {
       text-align: left;
+      margin-right: auto;
     }
 
     .next {
